compiler/test-data/parser/contract/errors/method_missing_parens.frel
module contract.errors.method_missing_parens

contract UserAPI {
    get_user : User
}
